# company-report-generator

./: README.md  pyproject.toml
src/assets/Apple_b0kkto2un4zh/: analysis.json  research.json  writer.json
src/assets/Meta_ix7jfp63l1gw/: analysis.json  research.json  writer.json
src/assets/google_wby6fjqlqkjt/: analysis.json  research.json  writer.json
src/assets/meta_dt0w4jmsgckv/: analysis.json  research.json  writer.json
src/assets/meta_jaxvfekkz83z/: analysis.json  research.json  writer.json
src/assets/vodafone_ijo3jkn039e8/: analysis.json  research.json  writer.json
static/css/: style.css
static/js/: script.js
templates/: index.html
