[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-report-generator"
version = "0.1.0"
description = "Generate comprehensive company reports using AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Ahmed Eltokhy", email = "ahmdeltoky4@gmail.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "langchain-cohere>=0.1.1",
    "cohere>=4.40",
    "tavily-python>=0.3.0",
    "markdown2>=2.4.9",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "reportlab>=4.4.5",
    "agentops>=0.4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]
